--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top">
+    <header class="top">
         <div class="title">
             <h1>10,000+ of our<br>
                 users love our<br>
@@ -53,8 +53,8 @@
             </div>
 
         </div>
-    </div>
-    <div class="box-comment">
+    </header>
+    <main class="box-comment">
         <div class="box1">
             <div class="perfil">
                 <img src="images/image-colton.jpg" alt="Calson Smith">
@@ -96,7 +96,7 @@
             </p>
         </div>
 
-    </div>
+    </main>
     
     <footer class="rodape">
             Challenge by <a href="https://www.frontendmentor.io/home">Frontend Mentor</a>.
